--- a/app/views/static/privacy.html.erb
+++ b/app/views/static/privacy.html.erb
@@ -1,76 +1,77 @@
-<div id="RSText" style="float:left; margin:0;">
-	  
-	<h2>
-		Privacy Policy
-	</h2>
-	<p>
-	At RotoStarter, your privacy is very important to us.  We believe in making great fantasy sports tools without having to compromise the confidentiality, integrity and security of any personal information about our users. 
-	</p>
-	<p>
-	We hate SPAM. We will only use your fantasy sports information in order to make playing fantasy sports easier and more enjoyable.  In the future, this might include selling services or ads in order to cover our costs (and hopefully make a little money).
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span10">
+			<h1>Web Site | Privacy Policy</h1>
 
-	</p>
-	<p>
-	 Accordingly, we have developed this Policy in order for you to understand how we collect, use, communicate and disclose and make use of personal information. The following outlines our privacy policy.
-	</p>
+			<p>
+			At RotoStarter, your privacy is very important to us.  We believe in making great fantasy sports tools without having to compromise the confidentiality, integrity and security of any personal information about our users. 
+			</p>
+			<p>
+			We hate SPAM. We will only use your fantasy sports information in order to make playing fantasy sports easier and more enjoyable.  In the future, this might include selling services or ads in order to cover our costs (and hopefully make a little money).
 
-	<h3>Website Visitors</h3>
-	<p>
-	Like most website operators, RotoStarter collects non-personally-identifying information of the sort that web browsers and servers typically make available, such as the browser type, language preference, referring site, and the date and time of each visitor request. RotoStarter's purpose in collecting non-personally identifying information is to better understand how RotoStarter's visitors use its website. 
-	</p>
-	<p>
-	From time to time, RotoStarter may release non-personally-identifying information in the aggregate, e.g., by publishing a report on trends in the usage of its website.
-	</p>
-	<p>
-	RotoStarter also collects potentially personally-identifying information like Yahoo or ESPN account ID's or such as Internet Protocol (IP) addresses.  RotoStarter only discloses logged in user under the same circumstances that it uses and discloses personally-identifying information as described below.
-	</p>
-	<h3>Gathering of Personally-Identifying Information</h3>
-	<p>
-	Certain visitors to RotoStarter's websites choose to interact with RotoStarter in ways that require RotoStarter to gather personally-identifying information. The amount and type of information that RotoStarter gathers depends on the nature of the interaction. 
-	</p>
-	<p>
-	For example, users who sign up for RotoStarter.com may provide their Yahoo and/or ESPN account log in information.  We will NOT use this information to access any information that is not related to fantasy sports.  This information is ONLY used to perform actions for the benefit of the user, at the request of the user.  
-	</p>
-	<p>
-	Those who engage in transactions with RotoStarter - by purchasing access to the premium service, for example - are asked to provide additional information, including as necessary the personal and financial information required to process those transactions. In each case, RotoStarter collects such information only insofar as is necessary or appropriate to fulfill the purpose of the visitor's interaction with RotoStarter. RotoStarter does not disclose personally-identifying information other than as described below. And visitors can always refuse to supply personally-identifying information, with the caveat that it may prevent them from engaging in certain website-related activities.
-	</p>
-	<h3>Aggregated Statistics</h3>
-	<p>
-	RotoStarter may collect statistics about the behavior of visitors to its websites. For instance, RotoStarter may aggregate data on popular rostered players.  RotoStarter may display this information publicly or provide it to others. However, RotoStarter does not disclose personally-identifying information other than as described below.
-	</p>
+			</p>
+			<p>
+			 Accordingly, we have developed this Policy in order for you to understand how we collect, use, communicate and disclose and make use of personal information. The following outlines our privacy policy.
+			</p>
 
-	<h3>Protection of Certain Personally-Identifying Information</h3>
-	<p>
-	RotoStarter discloses potentially personally-identifying and personally-identifying information only to those of its employees, contractors and affiliated organizations that (i) need to know that information in order to process it on RotoStarter's behalf or to provide services available at RotoStarter's websites, and (ii) that have agreed not to disclose it to others. Some of those employees, contractors and affiliated organizations may be located outside of your home country; by using RotoStarter's websites, you consent to the transfer of such information to them. 
-	</p>
-	<p>
+			<h3>Website Visitors</h3>
+			<p>
+			Like most website operators, RotoStarter collects non-personally-identifying information of the sort that web browsers and servers typically make available, such as the browser type, language preference, referring site, and the date and time of each visitor request. RotoStarter's purpose in collecting non-personally identifying information is to better understand how RotoStarter's visitors use its website. 
+			</p>
+			<p>
+			From time to time, RotoStarter may release non-personally-identifying information in the aggregate, e.g., by publishing a report on trends in the usage of its website.
+			</p>
+			<p>
+			RotoStarter also collects potentially personally-identifying information like Yahoo or ESPN account ID's or such as Internet Protocol (IP) addresses.  RotoStarter only discloses logged in user under the same circumstances that it uses and discloses personally-identifying information as described below.
+			</p>
+			<h3>Gathering of Personally-Identifying Information</h3>
+			<p>
+			Certain visitors to RotoStarter's websites choose to interact with RotoStarter in ways that require RotoStarter to gather personally-identifying information. The amount and type of information that RotoStarter gathers depends on the nature of the interaction. 
+			</p>
+			<p>
+			For example, users who sign up for RotoStarter.com may provide their Yahoo and/or ESPN account log in information.  We will NOT use this information to access any information that is not related to fantasy sports.  This information is ONLY used to perform actions for the benefit of the user, at the request of the user.  
+			</p>
+			<p>
+			Those who engage in transactions with RotoStarter - by purchasing access to the premium service, for example - are asked to provide additional information, including as necessary the personal and financial information required to process those transactions. In each case, RotoStarter collects such information only insofar as is necessary or appropriate to fulfill the purpose of the visitor's interaction with RotoStarter. RotoStarter does not disclose personally-identifying information other than as described below. And visitors can always refuse to supply personally-identifying information, with the caveat that it may prevent them from engaging in certain website-related activities.
+			</p>
+			<h3>Aggregated Statistics</h3>
+			<p>
+			RotoStarter may collect statistics about the behavior of visitors to its websites. For instance, RotoStarter may aggregate data on popular rostered players.  RotoStarter may display this information publicly or provide it to others. However, RotoStarter does not disclose personally-identifying information other than as described below.
+			</p>
 
-	RotoStarter will not rent or sell potentially personally-identifying and personally-identifying information to anyone. Other than to its employees, contractors and affiliated organizations, as described above, RotoStarter discloses potentially personally-identifying and personally-identifying information only in response to a subpoena, court order or other governmental request, or when RotoStarter believes in good faith that disclosure is reasonably necessary to protect the property or rights of RotoStarter, third parties or the public at large. 
-	</p>
-	<p>
-	If you are a registered user of an RotoStarter website and have supplied your email address, RotoStarter may occasionally send you an email to tell you about new features, solicit your feedback, or just keep you up to date with what's going on with RotoStarter and our products. 
-	</p>
-	<p>
-	If you send us a request (for example via a support email or via one of our feedback mechanisms), we reserve the right to publish it in order to help us clarify or respond to your request or to help us support other users. RotoStarter takes all measures reasonably necessary to protect against the unauthorized access, use, alteration or destruction of potentially personally-identifying and personally-identifying information.
-	</p>
-	<h3>Cookies</h3>
-	<p>
-	A cookie is a string of information that a website stores on a visitor's computer, and that the visitor's browser provides to the website each time the visitor returns. RotoStarter uses cookies to help RotoStarter identify and track visitors, their usage of RotoStarter website, and their website access preferences. RotoStarter visitors who do not wish to have cookies placed on their computers should set their browsers to refuse cookies before using RotoStarter's websites, with the drawback that certain features of RotoStarter's websites may not function properly without the aid of cookies.
-	</p>
-	<p>
+			<h3>Protection of Certain Personally-Identifying Information</h3>
+			<p>
+			RotoStarter discloses potentially personally-identifying and personally-identifying information only to those of its employees, contractors and affiliated organizations that (i) need to know that information in order to process it on RotoStarter's behalf or to provide services available at RotoStarter's websites, and (ii) that have agreed not to disclose it to others. Some of those employees, contractors and affiliated organizations may be located outside of your home country; by using RotoStarter's websites, you consent to the transfer of such information to them. 
+			</p>
+			<p>
 
-	<h3>Business Transfers</h3>
-	If RotoStarter, or substantially all of its assets, were acquired, or in the unlikely event that RotoStarter goes out of business or enters bankruptcy, user information would be one of the assets that is transferred or acquired by a third party. You acknowledge that such transfers may occur, and that any acquirer of RotoStarter may continue to use your personal information as set forth in this policy.
-	</p>
-	<p>
+			RotoStarter will not rent or sell potentially personally-identifying and personally-identifying information to anyone. Other than to its employees, contractors and affiliated organizations, as described above, RotoStarter discloses potentially personally-identifying and personally-identifying information only in response to a subpoena, court order or other governmental request, or when RotoStarter believes in good faith that disclosure is reasonably necessary to protect the property or rights of RotoStarter, third parties or the public at large. 
+			</p>
+			<p>
+			If you are a registered user of an RotoStarter website and have supplied your email address, RotoStarter may occasionally send you an email to tell you about new features, solicit your feedback, or just keep you up to date with what's going on with RotoStarter and our products. 
+			</p>
+			<p>
+			If you send us a request (for example via a support email or via one of our feedback mechanisms), we reserve the right to publish it in order to help us clarify or respond to your request or to help us support other users. RotoStarter takes all measures reasonably necessary to protect against the unauthorized access, use, alteration or destruction of potentially personally-identifying and personally-identifying information.
+			</p>
+			<h3>Cookies</h3>
+			<p>
+			A cookie is a string of information that a website stores on a visitor's computer, and that the visitor's browser provides to the website each time the visitor returns. RotoStarter uses cookies to help RotoStarter identify and track visitors, their usage of RotoStarter website, and their website access preferences. RotoStarter visitors who do not wish to have cookies placed on their computers should set their browsers to refuse cookies before using RotoStarter's websites, with the drawback that certain features of RotoStarter's websites may not function properly without the aid of cookies.
+			</p>
+			<p>
 
-	<h3>Ads</h3>
-	Ads may be delivered to users by advertising partners, who may set cookies. These cookies allow the ad server to recognize your computer each time they send you an online advertisement to compile information about you or others who use your computer. This information allows ad networks to, among other things, deliver targeted advertisements that they believe will be of most interest to you. This Privacy Policy covers the use of cookies by RotoStarter and does not cover the use of cookies by any advertisers.
-	</p>
-	<p>
+			<h3>Business Transfers</h3>
+			If RotoStarter, or substantially all of its assets, were acquired, or in the unlikely event that RotoStarter goes out of business or enters bankruptcy, user information would be one of the assets that is transferred or acquired by a third party. You acknowledge that such transfers may occur, and that any acquirer of RotoStarter may continue to use your personal information as set forth in this policy.
+			</p>
+			<p>
 
-	<h3>Privacy Policy Changes</h3>
-	Although most changes are likely to be minor, RotoStarter may change its Privacy Policy from time to time, and in RotoStarter's sole discretion. RotoStarter encourages visitors to frequently check this page for any changes to its Privacy Policy. Your continued use of this site after any change in this Privacy Policy will constitute your acceptance of such change.
-	</p>
+			<h3>Ads</h3>
+			Ads may be delivered to users by advertising partners, who may set cookies. These cookies allow the ad server to recognize your computer each time they send you an online advertisement to compile information about you or others who use your computer. This information allows ad networks to, among other things, deliver targeted advertisements that they believe will be of most interest to you. This Privacy Policy covers the use of cookies by RotoStarter and does not cover the use of cookies by any advertisers.
+			</p>
+			<p>
 
+			<h3>Privacy Policy Changes</h3>
+			Although most changes are likely to be minor, RotoStarter may change its Privacy Policy from time to time, and in RotoStarter's sole discretion. RotoStarter encourages visitors to frequently check this page for any changes to its Privacy Policy. Your continued use of this site after any change in this Privacy Policy will constitute your acceptance of such change.
+			</p>
+		</div>
+	</div>
 </div>
