--- a/app/views/static/terms.html.erb
+++ b/app/views/static/terms.html.erb
@@ -1,81 +1,69 @@
-<div class="navbar">
-  <div class="navbar-inner">
-    <a class="brand" href="#">Title</a>
-    <ul class="nav">
-      <li class="active"><a href="#">Home</a></li>
-      <li><a href="#">Link</a></li>
-      <li><a href="#">Link</a></li>
-    </ul>
-  </div>
-</div>
+<div class="container-fluid">
+  <div class="row-fluid">
+    <div class="span10">
+			<h1>Web Site | Terms and Conditions</h1>
 
+			<h3>Terms</h3>
+			<p>
+				By accessing this web site, you are agreeing to be bound by these 
+				web site Terms and Conditions of Use, all applicable laws and regulations, 
+				and agree that you are responsible for compliance with any applicable local 
+				laws. If you do not agree with any of these terms, you are prohibited from 
+				using or accessing this site. The materials contained in this web site are 
+				protected by applicable copyright and trade mark law.
+			</p>
+			<h3>Use License</h3>
+			<ol type="a">
+				<li>
+					Permission is granted to temporarily download one copy of the materials 
+					(information or software) on RotoStarter's web site for personal, 
+					non-commercial transitory viewing only. This is the grant of a license, 
+					not a transfer of title, and under this license you may not:
 
-<div id="RSText" style="float:left; margin:0;">
-	  
-	<h2>
-		Web Site Terms and Conditions of Use
-	</h2>
-
-	<h3>Terms</h3>
-	<p>
-		By accessing this web site, you are agreeing to be bound by these 
-		web site Terms and Conditions of Use, all applicable laws and regulations, 
-		and agree that you are responsible for compliance with any applicable local 
-		laws. If you do not agree with any of these terms, you are prohibited from 
-		using or accessing this site. The materials contained in this web site are 
-		protected by applicable copyright and trade mark law.
-	</p>
-	<h3>Use License</h3>
-	<ol type="a">
-		<li>
-			Permission is granted to temporarily download one copy of the materials 
-			(information or software) on RotoStarter's web site for personal, 
-			non-commercial transitory viewing only. This is the grant of a license, 
-			not a transfer of title, and under this license you may not:
-
-			<ol type="i">
-				<li>modify or copy the materials;</li>
-				<li>use the materials for any commercial purpose, or for any public display (commercial or non-commercial);</li>
-				<li>attempt to decompile or reverse engineer any software contained on RotoStarter's web site;</li>
-				<li>remove any copyright or other proprietary notations from the materials; or</li>
-				<li>transfer the materials to another person or "mirror" the materials on any other server.</li>
+					<ol type="i">
+						<li>modify or copy the materials;</li>
+						<li>use the materials for any commercial purpose, or for any public display (commercial or non-commercial);</li>
+						<li>attempt to decompile or reverse engineer any software contained on RotoStarter's web site;</li>
+						<li>remove any copyright or other proprietary notations from the materials; or</li>
+						<li>transfer the materials to another person or "mirror" the materials on any other server.</li>
+					</ol>
+				</li>
+				<li>
+					This license shall automatically terminate if you violate any of these restrictions and may be terminated by RotoStarter at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.
+				</li>
 			</ol>
-		</li>
-		<li>
-			This license shall automatically terminate if you violate any of these restrictions and may be terminated by RotoStarter at any time. Upon terminating your viewing of these materials or upon the termination of this license, you must destroy any downloaded materials in your possession whether in electronic or printed format.
-		</li>
-	</ol>
-	<h3>Revisions and Errata</h3>
-	<p>
-		The materials appearing on RotoStarter's web site could include technical, typographical, or photographic errors. RotoStarter does not warrant that any of the materials on its web site are accurate, complete, or current. RotoStarter may make changes to the materials contained on its web site at any time without notice. RotoStarter does not, however, make any commitment to update the materials.
-	</p>
-	<h3>Links</h3>
-	<p>RotoStarter has not reviewed all of the sites linked to its Internet web site and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by RotoStarter of the site. Use of any such linked web site is at the user's own risk.
-	</p>
-	<h3>Changes</h3>
-	<p>RotoStarter reserves the right, at its sole discretion, to modify or replace any part of this Agreement. It is your responsibility to check this Agreement periodically for changes. Your continued use of or access to the Website following the posting of any changes to this Agreement constitutes acceptance of those changes. RotoStarter may also, in the future, offer new services and/or features through the Website (including, the release of new tools and resources). Such new features and/or services shall be subject to the terms and conditions of this Agreement.
-	</p>
-	<h3>Termination</h3>
-	<p>
-	RotoStarter may terminate your access to all or any part of the Website at any time, with or without cause, with or without notice, effective immediately. If you wish to terminate this Agreement or your RotoStarter.com account (if you have one), you may simply discontinue using the Website. Notwithstanding the foregoing, if you have a VIP Services account, such account can only be terminated by RotoStarter if you materially breach this Agreement and fail to cure such breach within thirty (30) days from RotoStarter’s notice to you thereof; provided that, RotoStarter can terminate the Website immediately as part of a general shut down of our service. All provisions of this Agreement which by their nature should survive termination shall survive termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity and limitations of liability. 
-	</p>
-	<h3>The Website is provided “as is”</h3>
-	<p>RotoStarter and its suppliers and licensors hereby disclaim all warranties of any kind, express or implied, including, without limitation, the warranties of merchantability, fitness for a particular purpose and non-infringement. Neither RotoStarter nor its suppliers and licensors, makes any warranty that the Website will be error free or that access thereto will be continuous or uninterrupted. If you’re actually reading this, here’s a treat. You understand that you download from, or otherwise obtain content or services through, the Website at your own discretion and risk.
-	</p>
-	<h3>Limitation of Liability</h3>
-	<p>In no event shall RotoStarter or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption,) arising out of the use or inability to use the materials on RotoStarter's Internet site, even if RotoStarter or a RotoStarter authorized representative has been notified orally or in writing of the possibility of such damage. 
+			<h3>Revisions and Errata</h3>
+			<p>
+				The materials appearing on RotoStarter's web site could include technical, typographical, or photographic errors. RotoStarter does not warrant that any of the materials on its web site are accurate, complete, or current. RotoStarter may make changes to the materials contained on its web site at any time without notice. RotoStarter does not, however, make any commitment to update the materials.
+			</p>
+			<h3>Links</h3>
+			<p>RotoStarter has not reviewed all of the sites linked to its Internet web site and is not responsible for the contents of any such linked site. The inclusion of any link does not imply endorsement by RotoStarter of the site. Use of any such linked web site is at the user's own risk.
+			</p>
+			<h3>Changes</h3>
+			<p>RotoStarter reserves the right, at its sole discretion, to modify or replace any part of this Agreement. It is your responsibility to check this Agreement periodically for changes. Your continued use of or access to the Website following the posting of any changes to this Agreement constitutes acceptance of those changes. RotoStarter may also, in the future, offer new services and/or features through the Website (including, the release of new tools and resources). Such new features and/or services shall be subject to the terms and conditions of this Agreement.
+			</p>
+			<h3>Termination</h3>
+			<p>
+			RotoStarter may terminate your access to all or any part of the Website at any time, with or without cause, with or without notice, effective immediately. If you wish to terminate this Agreement or your RotoStarter.com account (if you have one), you may simply discontinue using the Website. Notwithstanding the foregoing, if you have a VIP Services account, such account can only be terminated by RotoStarter if you materially breach this Agreement and fail to cure such breach within thirty (30) days from RotoStarter’s notice to you thereof; provided that, RotoStarter can terminate the Website immediately as part of a general shut down of our service. All provisions of this Agreement which by their nature should survive termination shall survive termination, including, without limitation, ownership provisions, warranty disclaimers, indemnity and limitations of liability. 
+			</p>
+			<h3>The Website is provided “as is”</h3>
+			<p>RotoStarter and its suppliers and licensors hereby disclaim all warranties of any kind, express or implied, including, without limitation, the warranties of merchantability, fitness for a particular purpose and non-infringement. Neither RotoStarter nor its suppliers and licensors, makes any warranty that the Website will be error free or that access thereto will be continuous or uninterrupted. If you’re actually reading this, here’s a treat. You understand that you download from, or otherwise obtain content or services through, the Website at your own discretion and risk.
+			</p>
+			<h3>Limitation of Liability</h3>
+			<p>In no event shall RotoStarter or its suppliers be liable for any damages (including, without limitation, damages for loss of data or profit, or due to business interruption,) arising out of the use or inability to use the materials on RotoStarter's Internet site, even if RotoStarter or a RotoStarter authorized representative has been notified orally or in writing of the possibility of such damage. 
 
-	In no event will RotoStarter, or its suppliers or licensors, be liable with respect to any subject matter of this agreement under any contract, negligence, strict liability or other legal or equitable theory for: (i) any special, incidental or consequential damages; (ii) the cost of procurement for substitute products or services; (iii) for interruption of use or loss or corruption of data; or (iv) for any amounts that exceed the fees paid by you to RotoStarter under this agreement during the twelve (12) month period prior to the cause of action. RotoStarter shall have no liability for any failure or delay due to matters beyond their reasonable control. The foregoing shall not apply to the extent prohibited by applicable law.
-	</p>
-	<h3>General Representation and Warranty</h3>
-	<p>You represent and warrant that (i) your use of the Website will be in strict accordance with the RotoStarter Privacy Policy, with this Agreement and with all applicable laws and regulations (including without limitation any local laws or regulations in your country, state, city, or other governmental area, regarding online conduct and acceptable content, and including all applicable laws regarding the transmission of technical data exported from the United States or the country in which you reside) and (ii) your use of the Website will not infringe or misappropriate the intellectual property rights of any third party.
-	</p>
-	</p>
-	<h3>Governing Law</h3>
-	<p>Any claim relating to RotoStarter's web site shall be governed by the laws of the State of New York without regard to its conflict of law provisions.
-	</p>
-	<h3>Indemnification</h3>
-	<p> You agree to indemnify and hold harmless RotoStarter, its contractors, and its licensors, and their respective directors, officers, employees and agents from and against any and all claims and expenses, including attorneys’ fees, arising out of your use of the Website, including but not limited to your violation of this Agreement.
-	</p>
-
+			In no event will RotoStarter, or its suppliers or licensors, be liable with respect to any subject matter of this agreement under any contract, negligence, strict liability or other legal or equitable theory for: (i) any special, incidental or consequential damages; (ii) the cost of procurement for substitute products or services; (iii) for interruption of use or loss or corruption of data; or (iv) for any amounts that exceed the fees paid by you to RotoStarter under this agreement during the twelve (12) month period prior to the cause of action. RotoStarter shall have no liability for any failure or delay due to matters beyond their reasonable control. The foregoing shall not apply to the extent prohibited by applicable law.
+			</p>
+			<h3>General Representation and Warranty</h3>
+			<p>You represent and warrant that (i) your use of the Website will be in strict accordance with the RotoStarter Privacy Policy, with this Agreement and with all applicable laws and regulations (including without limitation any local laws or regulations in your country, state, city, or other governmental area, regarding online conduct and acceptable content, and including all applicable laws regarding the transmission of technical data exported from the United States or the country in which you reside) and (ii) your use of the Website will not infringe or misappropriate the intellectual property rights of any third party.
+			</p>
+			</p>
+			<h3>Governing Law</h3>
+			<p>Any claim relating to RotoStarter's web site shall be governed by the laws of the State of New York without regard to its conflict of law provisions.
+			</p>
+			<h3>Indemnification</h3>
+			<p> You agree to indemnify and hold harmless RotoStarter, its contractors, and its licensors, and their respective directors, officers, employees and agents from and against any and all claims and expenses, including attorneys’ fees, arising out of your use of the Website, including but not limited to your violation of this Agreement.
+			</p>
+		</div>
+	</div>
 </div>
